<resources>
    <string name="app_name">GridLayout_test</string>
    <string name="img1">Image 1</string>
    <string name="img2">Image 2</string>
    <string name="img3">Image 3</string>
    <string name="img4">Image 4</string>
    <string name="img5">Image 5</string>
    <string name="img6">Image 6</string>
    <string name="img7">Image 7</string>
    <string name="img8">Image 8</string>
    <string name="img9">Image 9</string>
    <string name="img10">Image 10</string>
    <string name="img11">Image 11</string>
    <string name="textView1">Text View 1</string>
    <string name="textView2">Text View 2</string>
</resources>